# not_chess

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/implementation/: ai_component.cpp  app.cpp  asset_manager.cpp  entities_factory.cpp  entity.cpp  finished_screen.cpp  game.cpp  game_screen.cpp  grid_component.cpp  input.cpp  input_component.cpp  pause_screen.cpp  scores.cpp  screen.cpp  screen_factory.cpp  settings.cpp  sound.cpp  sound_component.cpp  sprite_component.cpp  text_component.cpp
src/include/: ai_component.hpp  component.hpp  entities_factory.hpp  entity.hpp  finished_screen.hpp  game.hpp  game_screen.hpp  grid_component.hpp  input_component.hpp  pause_screen.hpp  position_component.hpp  screen_factory.hpp  sound_component.hpp  sprite_component.hpp  text_component.hpp
src/include/core/: app.hpp  app_exception.hpp  asset_manager.hpp  events.hpp  input.hpp  scores.hpp  screen.hpp  settings.hpp  sound.hpp
